fix(problem): fix problem edit page sample dimmer covers the user menu

--- a/src/pages/problem/edit/ProblemEditPage.module.less
+++ b/src/pages/problem/edit/ProblemEditPage.module.less
@@ -106,6 +106,7 @@
 
   :global(.dimmer) {
     background-color: rgba(255, 255, 255, 0.6) !important;
+    z-index: initial;
   }
 
   > .sectionSegment {
